Bug 151505 - Autofilter in xslb file ignored
Summary: Autofilter in xslb file ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XLSX-Autofilter
  Show dependency treegraph
 
Reported: 2022-10-13 11:48 UTC by Peter Hopfgartner
Modified: 2025-08-07 15:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file with filter enabled (7.94 KB, application/vnd.ms-excel.sheet.binary.macroEnabled.12)
2022-10-13 11:49 UTC, Peter Hopfgartner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Hopfgartner 2022-10-13 11:48:54 UTC
Description:
A file with an AutoFilter is created and saved as xslb (Excel Binary). When opening it with LibreOffice, the filter is ignored.

Steps to Reproduce:
1.Create file with filter in Excel 360
2.Save as xslb
3.Open in LO

Actual Results:
No filter in the first row

Expected Results:
filter in the first row


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.1.2 (x64) / LibreOffice Community
Build ID: 3c58a8f3a960df8bc8fd77b461821e42c061c5f0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (de_IT); UI: en-US
Calc: threaded
Comment 1 Peter Hopfgartner 2022-10-13 11:49:43 UTC
Created attachment 183012 [details]
Sample file with filter enabled
Comment 2 raal 2022-10-17 16:22:43 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 2e887e04c0008a4eb6cbf34050b6fa463a33599f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Works in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 raal 2022-10-17 16:30:29 UTC
This seems to have begun at the below commit.
Adding Cc: to Markus Mohrhard; Could you possibly take a look at this one?
Thanks
 62694407c461f2e095bd0a2497b13014988af9d4 is the first bad commit
commit 62694407c461f2e095bd0a2497b13014988af9d4
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 23:36:24 2015 +0800

    source-hash-c43a25a7268c1b6ab81e9ba694a1f22223a24afa
    
    commit c43a25a7268c1b6ab81e9ba694a1f22223a24afa
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Tue May 19 01:45:57 2015 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Tue May 19 02:27:55 2015 +0200
    
        replace import with direct ScCompiler calls, related tdf#91367
Comment 4 Commit Notification 2025-07-17 06:19:12 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e73fc4335bf20cb55db069208f489fa2519deeee

tdf#151505: fix autofilter import in XLSB

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-08-07 15:56:44 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f3c432ec2304f46d58ee0dcb1a23fb20d5d8ef14

tdf#151505: fix autofilter import in XLSB

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.