tdf#151505: fix autofilter import in XLSB

Change-Id: I880ba2f8ea384e092cd90d8b4fe2ad0356f6c1d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187979
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188699